--- a/TravelLive/Info.plist
+++ b/TravelLive/Info.plist
@@ -2,7 +2,7 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>UpdateLiveUrlKey</key>
+	<key>BaseUrl</key>
 	<string>https://asia-east1-travellive-1d79e.cloudfunctions.net</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>Need microphone access for uploading videos</string>
